k8s/chaos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-monkey
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: chaos-monkey
  replicas: 1
  template:
    metadata:
      labels:
        app: chaos-monkey
    spec:
      serviceAccountName: chaos-account
      containers:
      - name: chaos-monkey
        image: chaos-monkey:latest
        imagePullPolicy: IfNotPresent
