k8s/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: shared-postgres-db
  name: shared-postgres-db
  namespace: kube-public
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      service: shared-postgres-db
  template:
    metadata:
      labels:
        service: shared-postgres-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: pg-shared
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: user
            - name: PGDATA
              value: /var/lib/postgresql/data
          image: postgres:11
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv
              subPath: pg-shared
      restartPolicy: Always
      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: shared-postgres-db
  name: shared-postgres-db
  namespace: kube-public
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    service: shared-postgres-db
  type: ClusterIP
status:
  loadBalancer: {}
